fixing some scroll and visibility issues

--- a/portfolio/sass/projects.scss
+++ b/portfolio/sass/projects.scss
@@ -327,9 +327,10 @@ z-index: 1;
   position: absolute;
   height: 100%;
   width: 100%;
-  overflow-y: scroll;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
+  // overflow-y: scroll;
+  // overflow: hidden;
+  // backface-visibility: hidden;
+  // -webkit-backface-visibility: hidden;
 }
 
 .carousel-wrapper {
@@ -342,7 +343,15 @@ z-index: 1;
   @include transition(all 0.5s ease);
   &.zoomed {
     @include transform( scale(0.8) );
+    overflow: visible;
   }
+}
+
+.scroll-container {
+  overflow-y: scroll; 
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 // ================================== END CAROUSEL ================================
 
